
New Features in Taskwarrior 2.4.5

  - The active context, if one is set, is now identified in "task context list"

New commands in Taskwarrior 2.4.5

New configuration options in Taskwarrior 2.4.5

Newly deprecated features in Taskwarrior 2.4.5

Removed features in 2.4.5

  - The script 'context' was removed, now that context is a core feature.
  - Non­extended forms of ISO-8601 date/time support is removed. This means
    that 'YYYYMMDD' is no longer supported, but 'YYYY-MM-DD' is. For times,
    'hhmmss' is no longer supported, but 'hh:mm:ss' is. The non-enxtended
    forms all contain sequences of digits that make the identification of
    IDs, UUIDs, and various date/time formats problematic.

Known Issues

  - https://bug.tasktools.org/

Taskwarrior has been built and tested on the following configurations:

  * OS X
  * Fedora
  * Ubuntu
  * Debian
  * Arch
  * FreeBSD
  * Cygwin

---

While Taskwarrior has undergone testing, bugs are sure to remain.  If you
encounter a bug, please enter a new issue at:

  https://bug.tasktools.org

Or you can also report the issue in the forums at:

  https://answers.tasktools.org

Or just send a message to:

  support@taskwarrior.org

Thank you.