@@ -24,7 +24,7 @@
   and enabling more flexible use of the function.
 - Enable "task sync" support by default.  "cmake -DENABLE_SYNC=OFF" allows
   disabling it and building Taskwarrior without libgnutls available.
-
+- An attempt to add or remove a virtual tag is now an error (thanks to Scott M).
 
 ------ current release ---------------------------
 
