@@ -2,6 +2,7 @@
 New Features in Taskwarrior 2.4.5
 
   - The active context, if one is set, is now identified in "task context list"
+  - It is an error to attempt and add or remove of a virtual tag.
 
 New commands in Taskwarrior 2.4.5
 
